src/app/scss/my.scss
.myblock {
    display: block;

}

.fullScreen {
    width: 100%;
    height: 100%;
}

.clearMargins {
    margin: 0px;
}

.xSmallFont {
    font-size: 10px;
}

.normalFont {
    font-size: 14px;
}

.mediumFont {
    font-size: 18px;
}


.largeFont {
    font-size: 24px;
}



@media only screen and (max-width: 600px) {

    .xSmallFont {
        font-size: 8px;
    }
    
    .normalFont {
        font-size: 10px;
    }
    
    .mediumFont {
        font-size: 14px;
    }
    
    
    .largeFont {
        font-size: 20px;
    }


}










.paddedtb {
    padding-top: 100px;
    padding-bottom: 20px;
}

.mybackcolor {
    background-color: #000000;
}

.mybackcolor2 {
    background-color: #000000;
}


.breakwords {
    overflow-wrap: break-word;
}



.purple {
    color: rgb(223, 56, 223);
    text-align: center;
}

.purpleTitle {
    color: rgb(241, 218, 3);
    text-align: center;
}




.averageblock {
    display: block;
    margin-left: auto;
    margin-right: auto;

    text-align: center;
    object-fit: cover;
    max-height: 100%;
    max-width: 100%;

}

.fulllock {
    display: block;
    width: 100%;
    height: 100%;
}

.testblock {
    display: block;
    width: 100%;
    height: 100%;
}


canvas {
    background-color: blue;
    width: 100%;
    height: auto;
}


myheight {
    height: "100";
}

body {
    margin: 0;
    padding: 0;
    background-color: black !important;
}

blackbg {
    background-color: black;
}


:host {
    height: 100%
}





.fp-controlArrow.fp-prev {

    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
    transform: scale(1);
    animation: pulse 2s infinite;

}


.blob {
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
    transform: scale(1);
    animation: pulse 2s infinite;
}

@keyframes pulse {
    0% {
        transform: scale(0.90);
        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
    }

    70% {
        transform: scale(1.5);
        box-shadow: 0 0 0 15px rgba(0, 0, 0, 0);
    }

    100% {
        transform: scale(0.90);
        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
    }
}

